docs: update mutation-hardening skill documentation and examples
Enhances the SKILL.md with details on using the pitest-history-plugin for incremental analysis in Maven projects. Updates evals.json prompts to English and clarifies commands for running mutation tests with Maven and Gradle. Modifies pitest-config.md to reflect the latest configuration for PIT 1.23.1, including new properties and examples for excluding classes and setting JVM arguments for Java 17+.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>